agent0range/minion-webui/bridge/base/web-expose.yaml
#! web-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: web
    namespace: minion-webui
    labels:
        com.docker.compose.project: minion-webui
        com.docker.compose.service: web
spec:
    selector:
        com.docker.compose.project: minion-webui
        com.docker.compose.service: web
    ports:
        - name: web-5000
          port: 5000
          targetPort: web-5000
